Game running.